# berth

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PREREQUISITES.md  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: berth.rb
crates/berth-cli/: Cargo.toml
crates/berth-cli/src/: main.rs  paths.rs  permission_filter.rs  policy_engine.rs  runtime_policy.rs  sandbox_policy.rs  sandbox_runtime.rs  secrets.rs
crates/berth-cli/src/commands/: analytics.rs  audit.rs  config.rs  import_github.rs  info.rs  install.rs  link.rs  list.rs  logs.rs  mod.rs  permissions.rs  policy.rs  proxy.rs  publish.rs  registry_api.rs  restart.rs  search.rs  start.rs  status.rs  stop.rs  supervise.rs  uninstall.rs  unlink.rs  update.rs
crates/berth-cli/tests/: cli.rs
crates/berth-registry/: Cargo.toml
crates/berth-registry/data/: seed_registry.json
crates/berth-registry/src/: config.rs  lib.rs  search.rs  seed.rs  types.rs
crates/berth-runtime/: Cargo.toml
crates/berth-runtime/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  client-integration.md  index.md  installation.md  runtime-operations.md  security-model.md  team-workflows.md
scripts/: benchmark-smoke.sh  quality-checks.sh
