[workspace]
resolver = "2"
members = [
    "crates/berth-cli",
    "crates/berth-runtime",
    "crates/berth-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/berth-dev/berth"
description = "The safe runtime & package manager for MCP servers"
