[package]
name = "berth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Berth CLI - the safe runtime & package manager for MCP servers"

[[bin]]
name = "berth"
path = "src/main.rs"

[dependencies]
berth-registry = { version = "0.1.0", path = "../berth-registry" }
berth-runtime = { version = "0.1.0", path = "../berth-runtime" }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
