[package]
name = "berth-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Berth process management runtime"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tempfile = "3"
